# universal-tween-engine-cpp

./: .gitignore  CMakeLists.txt  Makefile
include/TweenEngine/: BaseTween.h  Tween.h
src/: BaseTween.cpp  Tween.cpp
src/equations/: Elastic.cpp  Sine.cpp
